==> Duc-BK/AUV_STM32_Code/AUV_Board_STM32F4_1_v3_without_pistol/FatFs/diskio.c <==
#include "ff.h"
#include "diskio.h"
#include "stm32f4xx.h"
#include "my_delay.h"
#include "stm32f4xx_spi.h"
#include "stm32f4xx_rcc.h"
#include "misc.h"
#define 	UFATFS_TIM  				      		TIM7
#define 	UFATFS_TIM_CLK					 	 		RCC_APB1Periph_TIM7
#define 	UFATFS_TIM_CLK_Cmd    				RCC_APB1PeriphClockCmd
#define   UFATFS_TIM_IRQn								TIM7_IRQn
#define 	UFATFS_TIM_IRQHandler					TIM7_IRQHandler
#define 	UFATFS_CD_PIN  				   	GPIO_Pin_4
#define 	UFATFS_CD_PORT 				  	GPIOC
#define 	UFATFS_CD_CLK							RCC_AHB1Periph_GPIOC
#define 	UFATFS_CD_SOURCE				 	GPIO_PinSource4
#define		UFATFS_CD_CLK_Cmd		  	 	RCC_AHB1PeriphClockCmd
#define 	UFATFS_NSS_PIN  				   	GPIO_Pin_4
#define 	UFATFS_NSS_PORT 				  	GPIOA
#define 	UFATFS_NSS_CLK							RCC_AHB1Periph_GPIOA
#define 	UFATFS_NSS_SOURCE				 		GPIO_PinSource4
#define		UFATFS_NSS_CLK_Cmd		  	 	RCC_AHB1PeriphClockCmd
#define 	UFATFS_SCK_PIN  				   	GPIO_Pin_5
#define 	UFATFS_SCK_PORT 				  	GPIOA
#define 	UFATFS_SCK_CLK							RCC_AHB1Periph_GPIOA
#define 	UFATFS_SCK_SOURCE				 		GPIO_PinSource5
#define		UFATFS_SCK_CLK_Cmd		  	 	RCC_AHB1PeriphClockCmd
#define 	UFATFS_MISO_PIN  				   	GPIO_Pin_6
#define 	UFATFS_MISO_PORT 				  	GPIOA
#define 	UFATFS_MISO_CLK							RCC_AHB1Periph_GPIOA
#define 	UFATFS_MISO_SOURCE				 	GPIO_PinSource6
#define		UFATFS_MISO_CLK_Cmd		  	 	RCC_AHB1PeriphClockCmd
#define 	UFATFS_MOSI_PIN  				   	GPIO_Pin_7
#define 	UFATFS_MOSI_PORT 				  	GPIOA
#define 	UFATFS_MOSI_CLK							RCC_AHB1Periph_GPIOA

static
void init_spi (void)
{
	gpio_configuration();
	spi_configuration();		/* Enable SPI function */
	timer_configuration();
	CS_HIGH();			/* Set CS# high */

	UDELAY_ms(10);	/* 10ms */
}

static
BYTE xchg_spi (
	BYTE dat	/* Data to send */
)
{
	SPI_I2S_SendData(UFATFS_SPI, dat);
	while(SPI_I2S_GetFlagStatus(UFATFS_SPI, SPI_I2S_FLAG_TXE) == RESET);			//Wait for transmit. Transmit OK, turn on FLAG_TXE
	while(SPI_I2S_GetFlagStatus(UFATFS_SPI, SPI_I2S_FLAG_RXNE) == RESET);			//Wait for receive. Receive OK, turn on FLAG_RXNE
	return SPI_I2S_ReceiveData(UFATFS_SPI);		/* Return received byte */
}

static
void rcvr_spi_multi (
	BYTE *buff,		/* Pointer to data buffer */
	UINT btr		/* Number of bytes to receive (even number) */
)
{
	WORD d;


	SPI_MODE16BITS(); /* Put SPI into 16-bit mode */

	SPI_I2S_SendData(UFATFS_SPI, 0xFFFF);		/* Start the first SPI transaction */
	btr -= 2;
	do {					/* Receive the data block into buffer */
		while(SPI_I2S_GetFlagStatus(UFATFS_SPI, SPI_I2S_FLAG_TXE) == RESET);	/* Wait for end of the SPI transaction */
		while(SPI_I2S_GetFlagStatus(UFATFS_SPI, SPI_I2S_FLAG_RXNE) == RESET);
		d = SPI_I2S_ReceiveData(UFATFS_SPI);						/* Get received word */
		SPI_I2S_SendData(UFATFS_SPI, 0xFFFF);					/* Start next transaction */
		buff[1] = d; buff[0] = d >> 8; 		/* Store received data */
		buff += 2;
	} while (btr -= 2);
	while(SPI_I2S_GetFlagStatus(UFATFS_SPI, SPI_I2S_FLAG_TXE) == RESET);	/* Wait for end of the SPI transaction */
	while(SPI_I2S_GetFlagStatus(UFATFS_SPI, SPI_I2S_FLAG_RXNE) == RESET);
	d = SPI_I2S_ReceiveData(UFATFS_SPI);							/* Get last word received */
	buff[1] = d; buff[0] = d >> 8;			/* Store it */

	SPI_MODE8BITS();	/* Put SPI into 8-bit mode */
}

static
void xmit_spi_multi (
	const BYTE *buff,	/* Pointer to the data */
	UINT btx			/* Number of bytes to send (even number) */
)
{
	WORD d;

	SPI_MODE16BITS();		/* Put SPI into 16-bit mode */

	d = buff[0] << 8 | buff[1]; buff += 2;
	SPI_I2S_SendData(UFATFS_SPI, d);	/* Send the first word */
	btx -= 2;
	do {
		d = buff[0] << 8 | buff[1]; buff += 2;	/* Word to send next */
		while(SPI_I2S_GetFlagStatus(UFATFS_SPI, SPI_I2S_FLAG_TXE) == RESET);	/* Wait for end of the SPI transaction */
		while(SPI_I2S_GetFlagStatus(UFATFS_SPI, SPI_I2S_FLAG_RXNE) == RESET);
		(void)SPI_I2S_ReceiveData(UFATFS_SPI);							/* Discard received word */
		SPI_I2S_SendData(UFATFS_SPI, d);						/* Start next transaction */
	} while (btx -= 2);
	while(SPI_I2S_GetFlagStatus(UFATFS_SPI, SPI_I2S_FLAG_TXE) == RESET);	/* Wait for end of the SPI transaction */
	while(SPI_I2S_GetFlagStatus(UFATFS_SPI, SPI_I2S_FLAG_RXNE) == RESET);
	(void)SPI_I2S_ReceiveData(UFATFS_SPI);							/* Discard received word */

	SPI_MODE8BITS();	/* Put SPI into 8-bit mode */
}
