==> jozkosk1/RFID_hand_tag_reader/Core/Src/diskio.c <==
#define SPI_CH	1	/* SPI channel to use = 1: SPI1, 11: SPI1/remap, 2: SPI2 */
#define FCLK_SLOW() { SPI1->CR1 = (SPI1->CR1 & ~SPI_CR1_BR) | SPI_BAUDRATEPRESCALER_128; }	/* Set SCLK = PCLK / 256 */
#define FCLK_FAST() { SPI1->CR1 = (SPI1->CR1 & ~SPI_CR1_BR) | SPI_BAUDRATEPRESCALER_32; }	/* Set SCLK = PCLK / 4  = 21Mbits/s*/
#define	MMC_CD		1	/* Card detect (yes:true, no:false, default:true) */
#define	MMC_WP		0 /* Write protected (yes:true, no:false, default:false) */
#define SPIx_SR		SPI1_SR
#define SPIx_DR		SPI1_DR
#define	SPIxENABLE() {\
	__enable_peripheral(SPI1EN);\
	__enable_peripheral(IOPAEN);\
	__enable_peripheral(IOPCEN);\
	__gpio_conf_bit(GPIOA, 4, OUT_PP);						/* PA4: MMC_CS */\
	//__gpio_conf_bit(GPIOA, 5, ALT_PP);						/* PA5: MMC_SCLK */\
	//GPIOA_BSRR = _BV(6); __gpio_conf_bit(GPIOA, 6, IN_PUL); /* PA6: MMC_DO with pull-up */\
	__gpio_conf_bit(GPIOA, 7, ALT_PP);						/* PA7: MMC_DI */\
	GPIOC_BSRR = _BV(4); __gpio_conf_bit(GPIOC, 4, IN_PUL);	/* PC4: MMC_CD with pull-up */\
	SPIx_CR1 = _BV(9)|_BV(8)|_BV(6)|_BV(2);					/* Enable SPI1 */\
}*/
#include "stm32f0xx_hal.h"
#include "diskio.h"
#include "main.h"
#define CMD0	(0)			/* GO_IDLE_STATE */
#define CMD1	(1)			/* SEND_OP_COND (MMC) */
#define	ACMD41	(0x80+41)	/* SEND_OP_COND (SDC) */
#define CMD8	(8)			/* SEND_IF_COND */
#define CMD9	(9)			/* SEND_CSD */
#define CMD10	(10)		/* SEND_CID */
#define CMD12	(12)		/* STOP_TRANSMISSION */
#define ACMD13	(0x80+13)	/* SD_STATUS (SDC) */

static
void init_spi (void)
{
	//SPIxENABLE();		/* Enable SPI function */
	//CS_HIGH();			/* Set CS# high */
	HAL_GPIO_WritePin(SD_CS_GPIO_Port, SD_CS_Pin, GPIO_PIN_SET);


	//for (Timer1 = 10; Timer1; ) ;	/* 10ms */
	HAL_Delay(10);
}

static
BYTE xchg_spi (
	BYTE dat	/* Data to send */
)
{
	//SPIx_DR = dat;
	//while (SPIx_SR & _BV(7)) ;
	//return (BYTE)SPIx_DR;
	//HAL_GPIO_TogglePin(LED_RED_GPIO_Port, LED_RED_Pin);
	HAL_SPI_TransmitReceive(&hspi2, &dat, &dat, 1, 10);
	//HAL_GPIO_TogglePin(LED_RED_GPIO_Port, LED_RED_Pin);
	return dat;
}

static
void rcvr_spi_multi (
	BYTE *buff,		/* Pointer to data buffer */
	UINT btr		/* Number of bytes to receive (even number) */
)
{
	uint8_t i, Tx[10];
	for(i=0;i<10;i++)Tx[i]=0xFF;
	i=0;
	while(btr>10){
		HAL_SPI_TransmitReceive(&hspi2, Tx, (buff+(i*10)), 10, 10);
		btr -= 10;
		i++;
	}
	HAL_SPI_TransmitReceive(&hspi2, Tx, (buff+(i*10)), btr, 10);
	//memory increment disable peripheral increment disable
	//hspi2.hdmatx->Instance->CCR &= DMA_CCR_MINC;
/*
	HAL_SPI_TransmitReceive_DMA(&hspi2, TxDummy, buff, btr);
	while(FlagDMA_EOC==0);//Parse_ADC();
	FlagDMA_EOC = 0;*/
	//HAL_SPI_TransmitReceive(&hspi2, TxDummy, buff, btr, 10);
	//SPI_DMA_Rx(&hspi2, buff, btr);
	//HAL_Delay(1);
	//while(hspi2.hdmarx->Instance->CNDTR !=0x200);
	/*WORD d;


	SPIx_CR1 &= ~_BV(6);
	SPIx_CR1 |= (_BV(6) | _BV(11));	// Set SPI to 16-bit mode

	SPIx_DR = 0xFFFF;
	btr -= 2;
	do {					// Receive the data block into buffer
		while (SPIx_SR & _BV(7)) ;
		d = SPIx_DR;
		SPIx_DR = 0xFFFF;
		buff[1] = d; buff[0] = d >> 8;
		buff += 2;
	} while (btr -= 2);
	while (SPIx_SR & _BV(7)) ;
	d = SPIx_DR;
	buff[1] = d; buff[0] = d >> 8;

	SPIx_CR1 &= ~(_BV(6) | _BV(11));	// Set SPI to 8-bit mode
	SPIx_CR1 |= _BV(6);*/
}

static
void xmit_spi_multi (
	const BYTE *buff,	/* Pointer to the data */
	UINT btx			/* Number of bytes to send (even number) */
)
{
	uint8_t i, Rx[10];
	i=0;
	while(btx>10){
		HAL_SPI_TransmitReceive(&hspi2, (buff+(i*10)), Rx, 10, 10);
		btx -= 10;
		i++;
	}
	HAL_SPI_TransmitReceive(&hspi2, (buff+(i*10)), Rx, btx, 10);
	//memory increment enable peripheral increment disable
	/*uint8_t i[512];
	//hspi2.hdmatx->Instance->CCR &= DMA_CCR_MINC;
	HAL_SPI_TransmitReceive_DMA(&hspi2, buff, i, btx);
	while(FlagDMA_EOC==0);//Parse_ADC();
		FlagDMA_EOC = 0;*/
	//HAL_SPI_TransmitReceive(&hspi2, buff, i, btx, 10);
	//SPI_DMA_Tx(&hspi2, buff, btx);
	//HAL_Delay(1);
	//while(hspi2.hdmatx->Instance->CNDTR !=0x200);

	/*WORD d;


	SPIx_CR1 &= ~_BV(6);
	SPIx_CR1 |= (_BV(6) | _BV(11));		// Set SPI to 16-bit mode

	d = buff[0] << 8 | buff[1];
	SPIx_DR = d;
	buff += 2;
	btx -= 2;
	do {					// Receive the data block into buffer
		d = buff[0] << 8 | buff[1];
		while (SPIx_SR & _BV(7)) ;
		SPIx_DR;
		SPIx_DR = d;
		buff += 2;
	} while (btx -= 2);
	while (SPIx_SR & _BV(7)) ;
	SPIx_DR;

	SPIx_CR1 &= ~(_BV(6) | _BV(11));	// Set SPI to 8-bit mode
	SPIx_CR1 |= _BV(6);*/
}
